// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gets all notes successfully and renders them correctly in board view 1`] = `
<div>
  <div>
    Error! + 
    No more mocked responses for the query: {
  getAllUserDatabases {
    id
    title
    currentView
    notes
  }
}
, variables: {}
  </div>
</div>
`;

exports[`Gets all notes successfully and renders them correctly in table view 1`] = `
<div>
  <div>
    Error! + 
    No more mocked responses for the query: query getDatabase($id: ID!) {
  getDatabase(databaseId: $id) {
    id
    title
    currentView
    categories {
      id
      notes
      name
      databaseId
    }
    notes {
      id
      userId
      databaseId
      categoryId
      title
      blocks {
        id
        html
        tag
      }
      creationDate
      latestUpdate
    }
  }
}
, variables: {}
  </div>
</div>
`;

exports[`Handles network error correctly  1`] = `
<div>
  <div>
    Error! + 
    An error occurred
  </div>
</div>
`;

exports[`Renders loading state correctly 1`] = `
<div>
  <div
    class="ui active text loader"
  >
    Loading...
  </div>
</div>
`;
